found and resolved overflow bug

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    overflow-x: hidden;
     font-family: Helvetica;
     background-color: #4a5742;
 }
@@ -89,10 +88,6 @@ section {
     color: white;
     margin-top: 80px;
     flex-direction: column;
-}
-
-#intro>div {
-    padding: 90px;
 }
 
 #intro>div>h1 {
